--- a/src/components/quizSearch/quizSearch.scss
+++ b/src/components/quizSearch/quizSearch.scss
@@ -6,12 +6,21 @@
   align-items: center;
   flex-grow: 1;
   width: 100%;
-  margin: 80px;
+  margin: 100px;
   .tittle {
+    background-color: var(--color1);
+    padding: 10px 10px;
+    border-radius: 8px;
     h1 {
       font-size: 2.5rem;
       text-align: center;
       color: #a55200;
+    }
+    p {
+      font-size: 1.1rem;
+      text-align: center;
+      color: rgba(#a55200, 0.8);
+      padding: 5px;
     }
   }
 
@@ -44,15 +53,14 @@
       padding: 10px 20px;
       font-size: $fontSize;
       background-color: var(--color5);
-        color: white;
+      color: white;
       border: none;
       border: 2px solid var(--color5);
       border-radius: 8px;
       cursor: pointer;
       &:hover {
-      background-color: var(--color3);
-      color: black;
-        
+        background-color: var(--color3);
+        color: black;
       }
     }
   }
